--- a/src/assets/configuration.json
+++ b/src/assets/configuration.json
@@ -2,5 +2,6 @@
     "production": false,
     "dev": true,
     "API": "https://localhost:44330/api/",
-    "URL_UPLOAD": "https://localhost:44330/api/Upload/GetImage?imgName="
+    "URL_UPLOAD": "https://localhost:44330/api/Upload/GetImage?imgName=",
+    "URL_RECORD": "https://localhost:44330/api/Upload/GetRecord?fileName="
 }
